style: hide scrollbar in desktop calendar and fix cursor for leave items

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,3 +70,11 @@ body {
     -webkit-appearance: none !important;
   }
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.custom-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
